--- a/main.css
+++ b/main.css
@@ -57,3 +57,38 @@ body{
 	}
 
 }
+
+@keyframes move1{
+	20%{
+		right: 80.5%;
+		bottom:80%;
+	}
+	
+
+	24.95%{
+		width: 10px;
+  		height: 25px;
+  		background-color: blue;
+	}
+	
+	25%{
+		bottom: 0;
+		right: 80.5%;
+		width: 30px;
+		height: 3px;
+		background-color: red;
+	}
+
+	30%{
+		width: 45px;
+	}
+
+	100%{
+		bottom: 0;
+		right: 80.5%;
+		width: 45px;
+		height: 3px;
+		background-color: red;
+	}
+
+}
