--- a/main.css
+++ b/main.css
@@ -21,9 +21,82 @@ body{
  	border-radius: 50%;
 	background-color: blue;
 	-webkit-animation: move1 30s linear;
+	-moz-animation: move1 30s linear;
+	-o-animation: move1 30s linear;
+	animation: move1 30s linear;
 }
 
 @-webkit-keyframes move1{
+	20%{
+		right: 80.5%;
+		bottom:80%;
+	}
+	
+
+	24.95%{
+		width: 10px;
+  		height: 25px;
+  		background-color: blue;
+	}
+	
+	25%{
+		bottom: 0;
+		right: 80.5%;
+		width: 30px;
+		height: 3px;
+		background-color: red;
+	}
+
+	30%{
+		width: 45px;
+	}
+
+	100%{
+		bottom: 0;
+		right: 80.5%;
+		width: 45px;
+		height: 3px;
+		background-color: red;
+	}
+
+}
+
+@-moz-keyframes move1{
+	20%{
+		right: 80.5%;
+		bottom:80%;
+	}
+	
+
+	24.95%{
+		width: 10px;
+  		height: 25px;
+  		background-color: blue;
+	}
+	
+	25%{
+		bottom: 0;
+		right: 80.5%;
+		width: 30px;
+		height: 3px;
+		background-color: red;
+	}
+
+	30%{
+		width: 45px;
+	}
+
+	100%{
+		bottom: 0;
+		right: 80.5%;
+		width: 45px;
+		height: 3px;
+		background-color: red;
+	}
+
+}
+
+@-o-keyframes move1{
 	20%{
 		right: 80.5%;
 		bottom:80%;
